// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackedArea using SVG should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot stacked-area"
    >
      <path
        class="area"
        d="M0,100L20,83.333L40,66.667L40,100L20,100L0,100Z"
        style="fill: #99c1dc; stroke: rgb(107, 135, 154); opacity: 0.7; pointer-events: none;"
      />
      <path
        class="area"
        d="M0,76.667L20,53.333L40,26.667L40,66.667L20,83.333L0,100Z"
        style="fill: #fc998e; stroke: rgb(176, 107, 99); opacity: 0.7; pointer-events: none;"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`StackedArea using SVG should skip rendering if there is no x scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot stacked-area"
    />
  </svg>
</DocumentFragment>
`;

exports[`StackedArea using SVG should skip rendering if there is no y scale avaliable 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-plot stacked-area"
    />
  </svg>
</DocumentFragment>
`;
